--- a/assets/Styles.css
+++ b/assets/Styles.css
@@ -1,129 +1,322 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i');
-html,body{
-  margin:0;
-  height:120%;
-  font-family: 'Josefin Sans', sans-serif;
+
+html,
+body {
+    margin: 0;
+    height: 120%;
+    font-family: 'Josefin Sans', sans-serif;
 
 }
-a{
-  text-decoration:none
+
+a {
+    text-decoration: none
 }
-.header{
-  position:relative;
-  overflow:hidden;
-  display:flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  align-content: flex-start;
-  height:50vw;
-  min-height:400px;
-  max-height:550px;
-  min-width:300px;
-  color:#eee;
+
+.header {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: flex-start;
+    height: 50vw;
+    min-height: 400px;
+    max-height: 550px;
+    min-width: 300px;
+    color: #eee;
 }
-.header:after{
-  content:"";
-  width:100%;
-  height:100%;
-  position:absolute;
-  bottom:0;
-  left:0;
-  z-index:-1;
- background: linear-gradient(to bottom, rgba(0,0,0,0.12) 40%,rgba(27,32,48,1) 100%);
+
+.header:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.12) 40%, rgba(27, 32, 48, 1) 100%);
 }
-.header:before{
-  content:"";
-  width:100%;
-  height:200%;
-  position:absolute;
-  top:0;
-  left:0;
+
+.header:before {
+    content: "";
+    width: 100%;
+    height: 200%;
+    position: absolute;
+    top: 0;
+    left: 0;
     -webkit-backface-visibility: hidden;
-    -webkit-transform: translateZ(0); backface-visibility: hidden;
-  scale(1.0, 1.0);
-    transform: translateZ(0);
-  background:#1B2030 url(https://images.unsplash.com/photo-1571993142257-eae0b44cf0f1?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ) 50% 0 no-repeat;
-  background-size:100%;
-  background-attachment:fixed;
-  animation: grow 360s  linear 10ms infinite;
-  transition:all 0.4s ease-in-out;
-  z-index:-2
+    -webkit-transform: translateZ(0);
+    backface-visibility: hidden;
+    transform: translateZ(0) scale(1.0, 1.0);
+    background: #1B2030 url(https://images.unsplash.com/photo-1571993142257-eae0b44cf0f1?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ) 50% 0 no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
+    animation: grow 360s linear 10ms infinite;
+    transition: all 0.4s ease-in-out;
+    z-index: -2
 }
-.header a{
-  color:#eee
+
+.header a {
+    color: #eee
 }
-.menu{
-  display:block;
-  width:40px;
-  height:30px;
-  border:2px solid #fff;
-  border-radius:3px;
-  position:absolute;
-  right:20px;
-  top:20px;
-  text-decoration:none
+
+.dropdown {
+    position: relative;
+    display: inline-block;
 }
-.menu:after{
-  content:"";
-  display:block;
-  width:20px;
-  height:3px;
-  background:#fff;
-  position:absolute;
-  margin:0 auto;
-  top:5px;
-  left:0;
-  right:0;
-  box-shadow:0 8px, 0 16px
+
+.dropbtn {
+    background-color: #1B2030;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    float: right;
+
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #555;
+    
+}
+
+
+.info h1,
+.meta {
+    margin: 0;
+    padding: 5px;
+}
+
+
+.sides {
+    display: flex;
+    justify-content: flex-end;
+    width: 95%;
+    
+}
+
+.info {
+    width: 100%;
+    padding: 15% 10% 0 10%;
+    text-align: center;
+    text-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
+    font-size: 4em;
+    font-weight: bold;
+    line-height: 1.5;
+    font-style: italic;
 }
 
 
 
-.sides, .info{
-  flex: 0 0 auto;
-  width:50%
-}
-.info{
-  width:100%;
-  padding:15% 10% 0 10%;
-  text-align:center;
-  text-shadow:0 2px 3px rgba(0,0,0,0.2)
-}
-.author{
-  display:inline-block;
-  width:50px;
-  height:50px;
-  border-radius:50%;
-  background:url(https://i.imgur.com/6DLCsZcb.jpg) center no-repeat;
-  background-size:cover;
-  box-shadow:0 2px 3px rgba(0,0,0,0.3);
-  margin-bottom:3px
-}
-.info h4, .meta{
-  font-size:0.7em
-}
-.meta{
-  font-style:italic;
-}
-@keyframes grow{
-  0% { transform: scale(1) translateY(0px)}
-  50% { transform: scale(1.2) translateY(-400px)}
-}
-.content{  
-  padding:5% 10%;
-  text-align:justify
-}
-.btn{
-  color:#333;
-  border:2px solid;
-  border-radius:3px;
-  text-decoration:none;
-  display:inline-block;
-  padding:5px 10px;
-  font-weight:600
+.author {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: url(https://i.imgur.com/6DLCsZcb.jpg) center no-repeat;
+    background-size: cover;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+    margin-bottom: 3px
 }
 
-.twtr{
-  margin-top:100px
-}.btn.twtr:after{content:"\1F426";padding-left:5px}
+.info h4,
+.meta {
+    font: size 1em;
+}
+
+.meta {
+    font-style: italic;
+}
+
+@keyframes grow {
+    0% {
+        transform: scale(1) translateY(0px)
+    }
+
+    50% {
+        transform: scale(1.2) translateY(-400px)
+    }
+}
+
+.content {
+    padding: 5% 10%;
+    text-align: justify
+}
+
+.Cities {
+    text-align: center; /* Centers the text horizontally on the page */
+    font-size: 3em; /* Makes the font size larger; adjust as needed */
+    font-weight: bold; /* Makes the text bold */
+    color: #000000; /* Dark grey color for the text, change as per your design */
+    margin-top: 15px; /* Adds space at the top, adjust based on your layout needs */
+    margin-bottom: 15px; /* Adds space at the bottom */
+    text-shadow: 0 2px 4px rgba(0,0,0,0.2); /* Adds a subtle shadow for depth */
+    padding: 10px; /* Adds padding around the text */
+    background-color: #ebe1e1; /* Light background color, optional */
+    border-radius: 8px; /* Rounded corners for the background, optional */
+    width: fit-content; /* Ensures the background only extends around the text */
+    margin-left: auto; /* These two margins center the block */
+    margin-right: auto;
+}
+
+
+
+
+.btn {
+    color: #333;
+    border: 2px solid;
+    border-radius: 3px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 5px 10px;
+    font-weight: 600
+}
+
+.twtr {
+    margin-top: 100px
+}
+
+.btn.twtr:after {
+    content: "\1F426";
+    padding-left: 5px
+}
+
+section ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+section ul li {
+    padding: 8px;
+    margin-bottom: 5px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    font-size: 18px;
+    
+}
+
+section ul li:hover {
+    background-color: #e0e0e0;
+    
+}
+
+
+
+.form-container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: lightgray;
+    
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 8px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #1B2030;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+}
+
+button:hover {
+    background-color: #292E49;
+}
+
+
+li {
+    background-color: #f4f4f4;
+    padding: 20px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+
+.city-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+
+.city-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text-info {
+    flex: 1;
+    padding-right: 30px;
+}
+
+.city-info img {
+    flex-shrink: 0;
+    max-width: 50%;
+    height: auto;
+}
+
+
+h3 {
+    margin: 0 0 20px 0;
+    color: #333;
+    font-size: xx-large;
+}
+
+li p {
+    color: #666;
+    font-size: 25px;
+}
+
+footer {
+    width: 100%;
+    background-color: #1B2030;
+    color: white;
+    text-align: center;
+    padding: 25px 0;
+    position:relative ; /* Keeps the footer at the bottom of the viewport */
+    bottom: 0;
+    left: 0;
+}
