--- a/assets/Styles.css
+++ b/assets/Styles.css
@@ -133,6 +133,14 @@ a {
     font-style: italic;
 }
 
+.main-contact{
+    background-color: darkgray;
+}
+.get {
+    text-align: center;
+    padding: 10px;
+    font-size:xx-large;
+}
 
 
 .author {
@@ -172,29 +180,19 @@ a {
 
 .Cities {
     text-align: center;
-    /* Centers the text horizontally on the page */
+    
     font-size: 3em;
-    /* Makes the font size larger; adjust as needed */
+    
     font-weight: bold;
-    /* Makes the text bold */
     color: #000000;
-    /* Dark grey color for the text, change as per your design */
     margin-top: 15px;
-    /* Adds space at the top, adjust based on your layout needs */
     margin-bottom: 15px;
-    /* Adds space at the bottom */
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    /* Adds a subtle shadow for depth */
     padding: 10px;
-    /* Adds padding around the text */
     background-color: #ebe1e1;
-    /* Light background color, optional */
     border-radius: 8px;
-    /* Rounded corners for the background, optional */
     width: fit-content;
-    /* Ensures the background only extends around the text */
     margin-left: auto;
-    /* These two margins center the block */
     margin-right: auto;
 }
 
@@ -248,6 +246,7 @@ section ul li:hover {
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: lightgray;
+    margin-bottom: 10px;
 
 }
 
@@ -398,7 +397,7 @@ img {
     gap: 5px;
     padding: 10px;
     width: 100%;
-    max-width: 1200px; 
+    max-width: 1400px; 
     margin: auto;
 }
 
@@ -425,6 +424,10 @@ footer {
     background-color: #1B2030;
     color: white;
     width: 100%;
+}
+
+.main-gallary {
+    background-color: darkgray;
 }
 
 @media (max-width: 768px) {
