--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,7 +49,7 @@ a {
     -webkit-transform: translateZ(0);
     backface-visibility: hidden;
     transform: translateZ(0) scale(1.0, 1.0);
-    background: #1B2030 url(https://images.unsplash.com/photo-1571993142257-eae0b44cf0f1?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ) 50% 0 no-repeat;
+    background: #1B2030 url(../images/mountain.jpeg) 50% 0 no-repeat;
     background-size: 100%;
     background-attachment: fixed;
     animation: grow 360s linear 10ms infinite;
@@ -142,13 +142,17 @@ a {
     font-size:xx-large;
 }
 
+.indexpics {
+  width:100%; 
+  height:auto;
+}
 
 .author {
     display: inline-block;
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background: url(https://i.imgur.com/6DLCsZcb.jpg) center no-repeat;
+    /* background: url(https://i.imgur.com/6DLCsZcb.jpg) center no-repeat; */
     background-size: cover;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
     margin-bottom: 3px
