--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,7 +160,7 @@ a {
 
 .info h4,
 .meta {
-    font: size 1em;
+    font-size:  1em;
 }
 
 .meta {
@@ -463,7 +463,7 @@ footer {
 
     .img-box {
         width: 100%; /* Full width for image boxes to use available space */
-        padding: 5px; /* Reduce padding */
+        padding: 0%; /* Reduce padding */
         height: auto; /* Make height automatic to maintain aspect ratio */
     }
 
