--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -152,7 +152,6 @@ a {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    /* background: url(https://i.imgur.com/6DLCsZcb.jpg) center no-repeat; */
     background-size: cover;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
     margin-bottom: 3px
@@ -444,38 +443,38 @@ footer {
     .header {
         flex-direction: column;
         justify-content: center;
-        min-height: 200px; /* Reduce the minimum height for smaller devices */
+        min-height: 200px; 
     }
 
     .dropdown .dropbtn {
         padding: 8px;
-        font-size: 12px; /* Reduce font size */
+        font-size: 12px; 
     }
 
     .info h1 {
-        font-size: 1.5em; /* Reduce the font size of the header title */
-        padding: 0 5%; /* Reduce padding around title */
+        font-size: 1.5em; 
+        padding: 0 5%; 
     }
 
     .gallery {
-        grid-template-columns: 1fr; /* Only one column in the gallery */
+        grid-template-columns: 1fr; 
     }
 
     .img-box {
-        width: 100%; /* Full width for image boxes to use available space */
-        padding: 0%; /* Reduce padding */
-        height: auto; /* Make height automatic to maintain aspect ratio */
+        width: 100%; 
+        padding: 5px; 
+        height: auto; 
     }
 
     .img-box img {
-        width: 100%; /* Ensure image uses all available space */
-        height: auto; /* Adjust height automatically */
+        width: 100%; 
+        height: auto; 
     }
 
     .content,
     .text-info p,
     .footer p {
-        font-size: 0.8em; /* Reduce font size for content and footer text */
+        font-size: 0.8em; 
     }
 
     .form-container,
@@ -483,6 +482,6 @@ footer {
     input[type="email"],
     textarea,
     button {
-        width: 100%; /* Ensure form elements use all available space */
+        width: 100%; 
     }
 }
