--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -397,11 +397,10 @@ img {
 .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
-    gap: 5px;
-    padding: 10px;
     width: 100%;
     max-width: 1400px; 
     margin: auto;
+    position: relative;
 }
 
 .img-box {
