--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,6 +48,7 @@ a {
     z-index: -2
 }
 
+
 .header a {
     color: #eee
 }
@@ -99,12 +100,6 @@ a {
 }
 
 
-.info h1,
-.meta   { 
- margin: 0px;
-padding: 10px;
-margin-right: 30px;
-}
 
 
 
@@ -122,8 +117,10 @@ margin-right: 30px;
     text-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
     font-size: 2em;
     font-weight: bold;
-    line-height: 2;
+    line-height: 4;
     font-style: italic;
+    display: flow;
+    unicode-bidi: isolate;
 }
 
 .main-contact{
@@ -140,15 +137,6 @@ margin-right: 30px;
   height:auto;
 }
 
-.author {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-size: cover;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
-    margin-bottom: 3px
-}
 
 .info h4,
 .meta {
@@ -328,63 +316,15 @@ footer {
     left: 0;
 }
 
-
-
-
-@media (max-width: 600px) {
-    .header {
-        flex-direction: column;
-    }
-}
-
-
-@media (min-width: 601px) and (max-width: 1024px) {
-    .header {
-        justify-content: space-between;
-    }
-}
-
-
-@media (min-width: 1025px) {
-    .header {
-        padding: 30px 40px;
-    }
-}
-
 body {
     font-size: 14px;
 }
 
-@media (min-width: 601px) {
-    body {
-        font-size: 16px;
-    }
-}
-
-@media (min-width: 1025px) {
-    body {
-        font-size: 18px;
-    }
-}
 
 img {
     width: 100%;
     height: auto;
 }
-
-@media (min-width: 600px) {
-    img {
-        width: 80%;
-    }
-}
-
-
-@media (min-width: 1024px) {
-    img {
-        width: 50%;
-    }
-}
-
 
 
 .gallery {
@@ -425,12 +365,8 @@ footer {
     background-color: darkgray;
 }
 
-@media (max-width: 768px) {
-    .gallery {
-        grid-template-columns: repeat(1, 1fr); 
-    }
-    
-}
+
+
 
 @media (max-width: 280px) {
     
@@ -454,9 +390,17 @@ footer {
         font-size: 12px; 
     }
 
-    .info h1 {
-        font-size: 1.5em; 
-        padding: 0 5%; 
+    .info {
+        width: 100%;
+        padding: 10% 10% 0 10%;
+        text-align: center;
+        text-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
+        font-size: 1em;
+        font-weight: bold;
+        line-height: 6;
+        font-style: italic;
+        display: flow;
+        unicode-bidi: isolate;
     }
 
     .gallery {
@@ -489,5 +433,105 @@ footer {
     button {
         width: 75%; 
         max-width: 100%; 
+    }
+
+    .Cities {
+        text-align: center;
+        font-size: 1.5em;
+        font-weight: bold;
+        color: #000000;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        padding: 10px;
+        background-color: #ebe1e1;
+        border-radius: 8px;
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 430px) {
+    
+    *, *:before, *:after {
+        box-sizing: border-box;
+    }
+
+    
+    body {
+        overflow-x: hidden;
+    }
+
+    .header {
+        flex-direction: row;
+        justify-content: space-between;
+        min-height: 200px; 
+    }
+
+    .dropdown .dropbtn {
+        padding: 8px;
+        font-size: 12px; 
+    }
+
+    .info {
+        width: 100%;
+        padding: 10% 10% 0 10%;
+        text-align: center;
+        text-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
+        font-size: 1em;
+        font-weight: bold;
+        line-height: 6;
+        font-style: italic;
+        display: flow;
+        unicode-bidi: isolate;
+    }
+
+    .gallery {
+        grid-template-columns: 1fr; 
+        width: 80%;
+        margin: 0 auto; 
+    }
+
+    .img-box {
+        width: 100%; 
+        padding: 5px; 
+        height: auto; 
+    }
+
+    .img-box img {
+        width: 100%; 
+        height: auto;
+    }
+
+    .content,
+    .text-info p,
+    .footer p {
+        font-size: 0.8em; 
+    }
+
+    .form-container,
+    input[type="text"],
+    input[type="email"],
+    textarea,
+    button {
+        width: 75%; 
+        max-width: 100%; 
+    }
+
+    .Cities {
+        text-align: center;
+        font-size: 1.5em;
+        font-weight: bold;
+        color: #000000;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        padding: 10px;
+        background-color: #ebe1e1;
+        border-radius: 8px;
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
