--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,9 +3,10 @@
 html,
 body {
     margin: 0;
-    height: 120%;
+    height: 100%;
     font-family: 'Josefin Sans', sans-serif;
-
+    overflow-x: hidden;
+    width: 100%;
 }
 
 a {
@@ -200,6 +201,10 @@ a {
 .btn.twtr:after {
     content: "\1F426";
     padding-left: 5px
+}
+section {
+    display: block;
+    unicode-bidi: isolate;
 }
 
 section ul {
@@ -558,5 +563,6 @@ footer {
         margin-top: 10px;
         margin-left: 45px;
     }
+    
     
 }
