--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,6 +124,10 @@ a {
     unicode-bidi: isolate;
 }
 
+.info h1 {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .main-contact{
     background-color: darkgray;
 }
@@ -565,4 +569,20 @@ footer {
     }
     
     
+}
+
+@media (max-width: 600px) {
+    .info h1 {
+        padding: 5px 10px; 
+    }
+    h1 {
+        display: block;
+        font-size: 17px;
+        margin-block-start: -1.1em;
+        margin-block-end: 0.67em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+        unicode-bidi: isolate;
+    }
 }
