--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,34 +1,46 @@
+/* Import the 'Josefin Sans' font family from Google Fonts */
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i');
 
 html,
 body {
+    /* Remove default margin and set height to 100% */
     margin: 0;
     height: 100%;
+    /* Set the font family for the entire document */
     font-family: 'Josefin Sans', sans-serif;
+    /* Prevent horizontal scrolling */
     overflow-x: hidden;
     width: 100%;
 }
 
 a {
-    text-decoration: none
+    /* Remove underline from links */
+    text-decoration: none;
 }
 
 .header {
+    /* Relative positioning for the header */
     position: relative;
+    /* Hide overflow content */
     overflow: hidden;
+    /* Use flexbox layout */
     display: flex;
     flex-wrap: wrap;
+    /* Center items horizontally and align them to the start vertically */
     justify-content: center;
     align-items: flex-start;
     align-content: flex-start;
+    /* Set the height of the header */
     height: 50vw;
     min-height: 400px;
     max-height: 550px;
     min-width: 200px;
+    /* Set the text color */
     color: #eee;
 }
 
 .header:after {
+    /* Add a gradient overlay to the header */
     content: "";
     width: 100%;
     height: 100%;
@@ -40,26 +52,29 @@ a {
 }
 
 .header:before {
+    /* Add a background image to the header */
     content: "";
     width: 100%;
     height: 100%;
     position: absolute;
     background: #1B2030 url(../images/mountainus_715x477_100.webp) 50% 0 no-repeat;
-    background-size:cover;
-    z-index: -2
+    background-size: cover;
+    z-index: -2;
 }
 
-
 .header a {
-    color: #eee
+    /* Set the color of links inside the header */
+    color: #eee;
 }
 
 .dropdown {
+    /* Relative positioning for the dropdown */
     position: relative;
     display: inline-block;
 }
 
 .dropbtn {
+    /* Style the dropdown button */
     background-color: #1B2030;
     color: white;
     padding: 16px;
@@ -67,20 +82,21 @@ a {
     border: none;
     cursor: pointer;
     float: right;
-
-
 }
 
 .dropdown-content {
+    /* Hide the dropdown content by default */
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
+    /* Add a shadow to the dropdown */
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
+    /* Style the links inside the dropdown */
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -88,34 +104,35 @@ a {
 }
 
 .dropdown-content a:hover {
+    /* Change background color on hover */
     background-color: #f1f1f1;
 }
 
 .dropdown:hover .dropdown-content {
+    /* Show the dropdown content on hover */
     display: block;
 }
 
 .dropdown:hover .dropbtn {
+    /* Change button background color on hover */
     background-color: #555;
-
 }
 
-
-
-
-
 .sides {
+    /* Use flexbox for layout and align items to the end */
     display: flex;
     justify-content: flex-end;
     width: 95%;
-
 }
 
 .info {
+    /* Set the width and padding for the info section */
     width: 100%;
     padding: 10% 10% 0 10%;
+    /* Center align text and add a shadow */
     text-align: center;
     text-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
+    /* Increase font size and line height */
     font-size: 2em;
     font-weight: bold;
     line-height: 4;
@@ -125,53 +142,361 @@ a {
 }
 
 .info h1 {
+    /* Add a semi-transparent background to h1 */
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.main-contact{
+.main-contact {
+    /* Set background color for main contact section */
     background-color: darkgray;
 }
+
 .get {
+    /* Center align text and set padding */
     text-align: center;
     padding: 10px;
-    font-size:xx-large;
+    font-size: xx-large;
 }
 
 .indexpics {
-  width:100%; 
-  height:auto;
+    /* Set width and maintain aspect ratio */
+    width: 100%; 
+    height: auto;
 }
-
 
 .info h4,
 .meta {
-    font-size:  1em;
+    /* Set font size for h4 and meta */
+    font-size: 1em;
 }
 
 .meta {
+    /* Italicize meta text */
     font-style: italic;
 }
 
 @keyframes grow {
+    /* Define keyframes for the grow animation */
     0% {
-        transform: scale(1) translateY(0px)
+        transform: scale(1) translateY(0px);
     }
 
     50% {
-        transform: scale(1.2) translateY(-400px)
+        transform: scale(1.2) translateY(-400px);
     }
 }
 
 .content {
+    /* Set padding and text alignment for content */
     padding: 5% 10%;
-    text-align: justify
+    text-align: justify;
 }
 
 .Cities {
+    /* Center align text and set font size */
     text-align: center;
-    
     font-size: 3em;
+    font-weight: bold;
+    color: #000000;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    /* Add text shadow and padding */
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    /* Set background color and border radius */
+    background-color: #ebe1e1;
+    border-radius: 8px;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn {
+    /* Style buttons */
+    color: #333;
+    border: 2px solid;
+    border-radius: 3px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 5px 10px;
+    font-weight: 600;
+}
+
+.twtr {
+    /* Add top margin for Twitter button */
+    margin-top: 100px;
+}
+
+.btn.twtr:after {
+    /* Add a bird emoji after Twitter button */
+    content: "\1F426";
+    padding-left: 5px;
+}
+
+section {
+    /* Set display and unicode properties for section */
+    display: block;
+    unicode-bidi: isolate;
+}
+
+section ul {
+    /* Remove list styles and padding for ul */
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+section ul li {
+    /* Style list items */
+    padding: 8px;
+    margin-bottom: 5px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    font-size: 18px;
+}
+
+section ul li:hover {
+    /* Change background color on hover */
+    background-color: #e0e0e0;
+}
+
+.form-container {
+    /* Set max width and center align form container */
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    /* Add shadow and background color */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: lightgray;
+    margin-bottom: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    /* Style text and email inputs, and textarea */
+    width: 100%;
+    padding: 8px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+button {
+    /* Set the background color, text color, border, padding, text transformation, cursor style, display, width, and margin for buttons */
+    background-color: #1B2030;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+}
+
+button:hover {
+    /* Change the background color on hover for buttons */
+    background-color: #292E49;
+}
+
+li {
+    /* Set the background color, padding, margin, border radius, and overflow for list items */
+    background-color: #f4f4f4;
+    padding: 20px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.city-info {
+    /* Use flexbox layout for city-info class, align items to the center, and set a gap between them */
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.city-info {
+    /* Use flexbox layout and center align items for city-info class */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text-info {
+    /* Set flex growth and padding for text-info class */
+    flex: 1;
+    padding-right: 30px;
+}
+
+.city-info img {
+    /* Prevent image shrinking, set maximum width, and maintain aspect ratio */
+    flex-shrink: 0;
+    max-width: 50%;
+    height: auto;
+}
+
+h3 {
+    /* Set margin, text color, and font size for h3 elements */
+    margin: 0 0 20px 0;
+    color: #333;
+    font-size: xx-large;
+}
+
+li p {
+    /* Set text color and font size for paragraphs within list items */
+    color: #666;
+    font-size: 25px;
+}
+
+footer {
+    /* Set width, background color, text color, text alignment, padding, and positioning for footer */
+    width: 100%;
+    background-color: #1B2030;
+    color: white;
+    text-align: center;
+    padding: 25px 0;
+    position: relative;
+    bottom: 0;
+    left: 0;
+}
+
+body {
+    /* Set font size for body */
+    font-size: 14px;
+}
+
+img {
+    /* Set image width and height to maintain aspect ratio */
+    width: 100%;
+    height: auto;
+}
+
+.gallery {
+    /* Use grid layout and set template columns, width, maximum width, margin, and positioning for gallery */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    width: 100%;
+    max-width: 1400px; 
+    margin: auto;
+    position: relative;
+}
+
+.img-box {
+    /* Set flex basis, width, padding, margin, height, and shadow for img-box */
+    flex-basis: 10%;
+    width: 400px;
+    padding: 5px;
+    margin: 10px;
+    height: 500px;
+    box-shadow: 1px 1px 15px 1px rgb(80, 84, 80); 
+}
+
+.img-box img {
+    /* Set width, height, and display properties for images within img-box */
+    width: 400px;
+    height: 500px;
+    display: block;
+}
+
+body {
+    /* Prevent horizontal scrolling for body */
+    overflow-x: hidden;
+}
+
+footer {
+    /* Set text alignment, padding, background color, text color, and width for footer */
+    text-align: center;
+    padding: 20px;
+    background-color: #1B2030;
+    color: white;
+    width: 100%;
+}
+
+.main-gallary {
+    /* Set background color for main gallery */
+    background-color: darkgray;
+}
+
+@media (max-width: 280px) {
+    /* Apply styles for screens with a maximum width of 280px */
     
+    *, *:before, *:after {
+        /* Apply box-sizing border-box model */
+        box-sizing: border-box;
+    }
+
+    body {
+        /* Prevent horizontal scrolling */
+        overflow-x: hidden;
+    }
+
+    .header {
+        /* Set flex direction, justify content, and minimum height for header */
+        flex-direction: row;
+        justify-content: space-between;
+        min-height: 200px; 
+    }
+}
+.dropdown .dropbtn {
+    /* Adjust padding and font size for dropdown button */
+    padding: 8px;
+    font-size: 12px;
+}
+
+.info {
+    /* Set width, padding, text alignment, text shadow, font size, font weight, line height, font style, display, and unicode bidi for info */
+    width: 100%;
+    padding: 10% 10% 0 10%;
+    text-align: center;
+    text-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 6;
+    font-style: italic;
+    display: flow;
+    unicode-bidi: isolate;
+}
+
+.gallery {
+    /* Set grid template columns, width, and margin for gallery */
+    grid-template-columns: 1fr;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.img-box {
+    /* Set width, padding, and height for img-box */
+    width: 100%;
+    padding: 5px;
+    height: auto;
+}
+
+.img-box img {
+    /* Set width and height for images within img-box */
+    width: 100%;
+    height: auto;
+}
+
+.content,
+.text-info p,
+.footer p {
+    /* Set font size for content, text-info paragraphs, and footer paragraphs */
+    font-size: 0.8em;
+}
+
+.form-container,
+input[type="text"],
+input[type="email"],
+textarea,
+button {
+    /* Set width and maximum width for form container and inputs */
+    width: 75%;
+    max-width: 100%;
+}
+
+.Cities {
+    /* Set text alignment, font size, font weight, color, margin, text shadow, padding, background color, border radius, width, and margin for Cities */
+    text-align: center;
+    font-size: 1.5em;
     font-weight: bold;
     color: #000000;
     margin-top: 15px;
@@ -185,311 +510,35 @@ a {
     margin-right: auto;
 }
 
-
-
-
-.btn {
-    color: #333;
-    border: 2px solid;
-    border-radius: 3px;
-    text-decoration: none;
-    display: inline-block;
-    padding: 5px 10px;
-    font-weight: 600
-}
-
-.twtr {
-    margin-top: 100px
-}
-
-.btn.twtr:after {
-    content: "\1F426";
-    padding-left: 5px
-}
-section {
-    display: block;
-    unicode-bidi: isolate;
-}
-
-section ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-section ul li {
-    padding: 8px;
-    margin-bottom: 5px;
-    background-color: #f1f1f1;
-    border: 1px solid #ccc;
-    font-size: 18px;
-
-}
-
-section ul li:hover {
-    background-color: #e0e0e0;
-
-}
-
-
-
-.form-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: lightgray;
-    margin-bottom: 10px;
-
-}
-
-input[type="text"],
-input[type="email"],
-textarea {
-    width: 100%;
-    padding: 8px;
-    margin: 8px 0;
-    box-sizing: border-box;
-}
-
-button {
-    background-color: #1B2030;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    cursor: pointer;
-    display: block;
-    width: 100%;
-    margin-top: 10px;
-}
-
-button:hover {
-    background-color: #292E49;
-}
-
-
-li {
-    background-color: #f4f4f4;
-    padding: 20px;
-    margin-bottom: 30px;
-    border-radius: 5px;
-    overflow: hidden;
-}
-
-
-.city-info {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-
-.city-info {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.text-info {
-    flex: 1;
-    padding-right: 30px;
-}
-
-.city-info img {
-    flex-shrink: 0;
-    max-width: 50%;
-    height: auto;
-}
-
-
-h3 {
-    margin: 0 0 20px 0;
-    color: #333;
-    font-size: xx-large;
-}
-
-li p {
-    color: #666;
-    font-size: 25px;
-}
-
-footer {
-    width: 100%;
-    background-color: #1B2030;
-    color: white;
-    text-align: center;
-    padding: 25px 0;
-    position: relative;
-    bottom: 0;
-    left: 0;
-}
-
-body {
-    font-size: 14px;
-}
-
-
-img {
-    width: 100%;
-    height: auto;
-}
-
-
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    width: 100%;
-    max-width: 1400px; 
-    margin: auto;
-    position: relative;
-}
-
-.img-box {
-    flex-basis: 10%;
-    width: 400px;
-    padding: 5px;
-    margin: 10px;
-    height: 500px;
-    
-    
-    box-shadow: 1px 1px 15px 1px rgb(80, 84, 80); 
-}
-.img-box img {
-    width: 400px;
-    height:500px;
-    display: block;
-    
-}
-
-body {
-    overflow-x: hidden;
-}
-
-
-footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #1B2030;
-    color: white;
-    width: 100%;
-}
-
-.main-gallary {
-    background-color: darkgray;
-}
-
-
-
-
-@media (max-width: 280px) {
-    
-    *, *:before, *:after {
-        box-sizing: border-box;
-    }
-
-    
-    body {
-        overflow-x: hidden;
-    }
-
-    .header {
-        flex-direction: row;
-        justify-content: space-between;
-        min-height: 200px; 
-    }
-
-    .dropdown .dropbtn {
-        padding: 8px;
-        font-size: 12px; 
-    }
-
-    .info {
-        width: 100%;
-        padding: 10% 10% 0 10%;
-        text-align: center;
-        text-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
-        font-size: 1em;
-        font-weight: bold;
-        line-height: 6;
-        font-style: italic;
-        display: flow;
-        unicode-bidi: isolate;
-    }
-
-    .gallery {
-        grid-template-columns: 1fr; 
-        width: 80%;
-        margin: 0 auto; 
-    }
-
-    .img-box {
-        width: 100%; 
-        padding: 5px; 
-        height: auto; 
-    }
-
-    .img-box img {
-        width: 100%; 
-        height: auto;
-    }
-
-    .content,
-    .text-info p,
-    .footer p {
-        font-size: 0.8em; 
-    }
-
-    .form-container,
-    input[type="text"],
-    input[type="email"],
-    textarea,
-    button {
-        width: 75%; 
-        max-width: 100%; 
-    }
-
-    .Cities {
-        text-align: center;
-        font-size: 1.5em;
-        font-weight: bold;
-        color: #000000;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        padding: 10px;
-        background-color: #ebe1e1;
-        border-radius: 8px;
-        width: fit-content;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
 @media (max-width: 430px) {
+    /* Apply styles for screens with a maximum width of 430px */
     
     *, *:before, *:after {
+        /* Apply box-sizing border-box model */
         box-sizing: border-box;
     }
 
-    
     body {
+        /* Prevent horizontal scrolling */
         overflow-x: hidden;
     }
 
     .header {
+        /* Set flex direction, justify content, and minimum height for header */
         flex-direction: row;
         justify-content: space-between;
-        min-height: 200px; 
+        min-height: 200px;
     }
 
     .dropdown .dropbtn {
+        /* Adjust padding, font size, and margin for dropdown button */
         padding: 15px;
         font-size: 15px;
-        margin-top: 5px; 
+        margin-top: 5px;
     }
 
     .info {
+        /* Adjust width, padding, text alignment, text shadow, font size, font weight, line height, font style, display, and unicode bidi for info */
         width: 100%;
         padding: 10% 10% 0 10%;
         text-align: center;
@@ -503,26 +552,30 @@ footer {
     }
 
     .gallery {
-        grid-template-columns: 1fr; 
+        /* Set grid template columns, width, and margin for gallery */
+        grid-template-columns: 1fr;
         width: 80%;
-        margin: 0 auto; 
+        margin: 0 auto;
     }
 
     .img-box {
-        width: 100%; 
-        padding: 5px; 
-        height: auto; 
+        /* Set width, padding, and height for img-box */
+        width: 100%;
+        padding: 5px;
+        height: auto;
     }
 
     .img-box img {
-        width: 100%; 
+        /* Set width and height for images within img-box */
+        width: 100%;
         height: auto;
     }
 
     .content,
     .text-info p,
     .footer p {
-        font-size: 0.8em; 
+        /* Adjust font size for content, text-info paragraphs, and footer paragraphs */
+        font-size: 0.8em;
     }
 
     .form-container,
@@ -530,11 +583,13 @@ footer {
     input[type="email"],
     textarea,
     button {
-        width: 70%; 
-        max-width: 100%; 
+        /* Set width and maximum width for form container and inputs */
+        width: 70%;
+        max-width: 100%;
     }
 
     .Cities {
+        /* Adjust text alignment, font size, font weight, color, margin, text shadow, padding, background color, border radius, width, and margin for Cities */
         text-align: center;
         font-size: 1.5em;
         font-weight: bold;
@@ -549,14 +604,16 @@ footer {
         margin-left: auto;
         margin-right: auto;
     }
+
     textarea {
+        /* Set padding, margin, and box-sizing for textarea */
         padding: 8px;
         margin: 8px 45px;
-        box-sizing: border-box;}
-        
-
+        box-sizing: border-box;
+    }
 
     button {
+        /* Set background color, text color, border, padding, text transformation, cursor style, display, margin-top, and margin-left for buttons */
         background-color: #1B2030;
         color: white;
         border: none;
@@ -567,15 +624,16 @@ footer {
         margin-top: 10px;
         margin-left: 45px;
     }
-    
-    
 }
 
 @media (max-width: 600px) {
     .info h1 {
-        padding: 5px 10px; 
+        /* Adjust padding for h1 elements within info */
+        padding: 5px 10px;
     }
+
     h1 {
+        /* Set display, font size, margins, font weight, and unicode bidi for h1 elements */
         display: block;
         font-size: 17px;
         margin-block-start: -1.1em;
